main-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: main-app-dep
  namespace: main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: main-app
  template:
    metadata:
      labels:
        app: main-app
    spec:
      volumes:
        - name: timestamp
          emptyDir: {}
      #   - name: pingcount
      #     persistentVolumeClaim:
      #       claimName: pingcount-pvc
      containers:
        - name: main-app-reader
          image: mikaalaoutinen/main-app-reader:latest
          volumeMounts:
            - name: timestamp
              mountPath: /tmp
          #   - name: pingcount
          #     mountPath: /tmp/kube
        - name: main-app-writer
          image: mikaalaoutinen/main-app-writer:latest
          volumeMounts:
            - name: timestamp
              mountPath: /tmp
