main-app/manifests/pingpong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      # volumes:
      #   - name: pingcount
      #     persistentVolumeClaim:
      #       claimName: pingcount-pvc
      containers:
        - name: pingpong
          image: mikaalaoutinen/pingpong:latest
          # volumeMounts:
          #   - name: pingcount
          #     mountPath: /tmp/kube
