main-app/manifests/pingpong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: pingpong
  # Opens a cluster-internal URL http://pingpong-svc. The name is derived from metadata name.
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9080
