main-app/manifests/reader-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-reader-svc
  namespace: main
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8080
