main-app/manifests/writer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: main-app-writer-svc
spec:
  type: ClusterIP
  selector:
    app: main-app
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8081
